# ruliad

./: README.md  docker-compose.yml  pyproject.toml
backend/: Dockerfile  README.md  openapi.yml  pyproject.toml
backend/ruliad/: __main__.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/: App.js
ruliad/app/: cli.py
ruliad/lib/: symbolic.py
